# SimpleDPP

./: .gitignore  Buffer.c  Buffer.h  CMakeLists.txt  LICENSE  README.md  SimpleDPP.c  SimpleDPP.h  main.c
c/: ArrayQueue.c  ArrayQueue.h  Buffer.c  Buffer.h  ByteBuffer.c  ByteBuffer.h  README.md  SimpleDPP.c  SimpleDPP.h  main.c
c++/: SimpleDPP.hpp  main.cpp
gcc/: ArrayQueue.c  Buffer.h  ByteBuffer.c  ByteBuffer.h  README.md  SimpleDPP.c  SimpleDPP.h  main.c  makefile
include/: EasyTel.h  SimpleDPP.h  SimpleDPP_port.h
java/src/: SimpleDPP.java
java/src/com/: SimpleDPP.java  test.java
lib/: cobject.h  cqueue.c  cqueue.h  crc.c  crc.h
matlab/: SimpleDPP.m  main.m  mbuffer.m  test.m
python/: SimpleDPP.py  main.py  test.py
qt/SimpleDPP/: SimpleDPP.pro  iotest.hpp  main.cpp  simpledpp.hpp
src/: ByteBuffer.c  ByteBuffer.h  EasyTel.c  Makefile.win  README.md  SimpleDPP.c  SimpleDPP.dev  SimpleDPP.h  SimpleDPP.layout  SimpleDPP_port.c  main.c
test/: host_slave_model_io_if.c  host_slave_model_io_if.h  main.c
